# go-geoid

./: CMakeLists.txt  README.md  geoid.go  geoid_test.go  go.mod  type.go
lib/: geoid_api.h
src/: CMakeLists.txt  geoid_api.cc
