
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB cgeoid_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc )
FILE( GLOB cgeoid_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hh ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(cgeoid STATIC
            ${cgeoid_HEADER_FILES}
            ${cgeoid_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(cgeoid PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${cgeoid_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${cgeoid_HEADER_FILES})

SET_TARGET_PROPERTIES(cgeoid
                    PROPERTIES PUBLIC_HEADER "${headers}")
