
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB cgeoid_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc )
FILE( GLOB cgeoid_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hh ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(cgeoid STATIC
            ${cgeoid_HEADER_FILES}
            ${cgeoid_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(cgeoid PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${cgeoid_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${cgeoid_HEADER_FILES})

SET_TARGET_PROPERTIES(cgeoid
                    PROPERTIES PUBLIC_HEADER "${headers}")


SET_TARGET_PROPERTIES(cgeoid PROPERTIES
                    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
                    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR})
SET_TARGET_PROPERTIES(cgeoid PROPERTIES 
                    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
                    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR})
SET_TARGET_PROPERTIES(cgeoid PROPERTIES
                    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
                    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR})
    